build: ship the game as a self-contained app image via GitHub Actions
GitHub Pages cannot host a JavaFX desktop app, so releases are built on CI and
attached to a GitHub Release instead.

`mvn package` previously produced a jar with no Main-Class, no Class-Path and no
dependencies beside it - not runnable, and nothing jpackage could consume. The
jar plugin now writes the manifest (Launcher, plus a libs/ classpath prefix) and
the dependency plugin fills target/libs/, which makes `java -jar` work locally
and gives the workflow a directory to package.

release.yml runs on a `v*` tag and on manual dispatch, the latter building the
same archives without publishing so packaging changes can be tested without a
throwaway tag. It matrixes windows-latest and ubuntu-latest because the JavaFX
artifacts carry a platform classifier and an image can only be built on the OS
it targets. The version comes from the tag, since jpackage rejects 1.0-SNAPSHOT.

--add-modules is spelled out rather than left to jdeps: java.net.http, java.prefs
and jdk.unsupported are all reached in ways a classpath scan does not see, and a
runtime missing one of them builds clean and dies at launch.

Verified locally on Windows: manifest correct, `java -jar` opens the window, and
a jpackage app-image built with these exact flags launches and takes the offline
path against a dead endpoint.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>